secret detail endpoint with swagger
